--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "node_modules/ol/ol.css",
+              "dist/mapuiexts/ng-ol-material/assets/styles/ng-ol-material.css",
               "projects/app-test/src/styles.css"
             ],
             "scripts": []
@@ -121,6 +122,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
+              "node_modules/ol/ol.css",
+              "dist/mapuiexts/ng-ol-material/assets/styles/ng-ol-material.css",
               "projects/app-test/src/styles.css"
             ],
             "scripts": []
